Fixed word-wrap. .text properties won't load now.

--- a/DanielCv/DanielCv/Styles/Main.css
+++ b/DanielCv/DanielCv/Styles/Main.css
@@ -30,7 +30,7 @@
    color: white;
 }
 
-#text {
+.text {
     background-color: lightgray;
     width: 75%;
     margin: 0 auto;
